test/Fail/Issue7575.agda
-- Test case by Mario Carneiro
open import Agda.Builtin.Nat
variable x : Nat
{-# BUILTIN NATPLUS x #-}
